--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -777,6 +777,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here on only experiments for sentiment analysis where done. Running sentiment analysis using Transformers can be found in sentiment_analysis2.ipynb notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
