added a ton of comments and explanation, some pictures and fixed errors

--- a/sentiment_analysis/sentiment_analysis_using_LSTM.ipynb
+++ b/sentiment_analysis/sentiment_analysis_using_LSTM.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stimmungsanalyse für IMDB-Kommentare (Basic LSTM Model)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +37,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir verwenden den `Tokenizer` von keras, um die Textdaten zu tokenisieren. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +57,14 @@
     "X_train = tokenizer.texts_to_sequences(train_df['review'])\n",
     "X_val = tokenizer.texts_to_sequences(val_df['review'])\n",
     "X_test = tokenizer.texts_to_sequences(test_df['review'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperparameter:"
    ]
   },
   {
@@ -58,8 +82,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nach der Tokenisierung der Textdaten werden die Sequenzen so aufgefüllt, dass sie eine feste Länge von 500 haben."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +102,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Das Label extrahiert und in Numpy-Arrays umgewandelt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Convert target variable to numpy arrays\n",
     "y_train = np.array(train_df['sentiment'])\n",
     "y_val = np.array(val_df['sentiment'])\n",
     "y_test = np.array(test_df['sentiment'])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir definieren eine LSTM-Modellarchitektur, um eine Stimmungsanalyse der tokenisierten  Textdaten durchzuführen. Das Model wird mit  \"Sequential\" von Keras erstellt."
    ]
   },
   {
@@ -101,8 +148,8 @@
     "\n",
     "# Define callbacks for early stopping and model checkpoint\n",
     "callbacks = [\n",
-    "    EarlyStopping(patience=3, monitor='val_loss', restore_best_weights=True),\n",
-    "    ModelCheckpoint(filepath='models/lstm_model_100000.h5', save_best_only=True)\n",
+    "    EarlyStopping(patience=3, monitor='val_loss', restore_best_weights=True),  #to stop when no improvement is beeing made\n",
+    "    ModelCheckpoint(filepath='models/lstm_model_100000.h5', save_best_only=True) # to save the model\n",
     "]\n"
    ]
   },
@@ -173,8 +220,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dasa LSTM-Model hat immernoch mit Overfitting zu kämpfen, hat aber mit einer Test Accuracy von 89,49 % den besten Wert. Deshalb wird im folgendem das Model zur klassifizierung eigener Bewertungen in String format verwendet"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 236ms/step\n",
       "positive\n"
      ]
     }
@@ -227,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 34ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
       "negative\n"
      ]
     }
