--- a/sentiment_analysis/sentiment_analysis_using_different_techniques.ipynb
+++ b/sentiment_analysis/sentiment_analysis_using_different_techniques.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stimmungsanalyse für IMDB-Kommentare (Basic ML Models)\n",
+    "\n",
+    "In diesem Projekt führen wir eine Stimmungsanalyse der IMDB-Kommentare durch, um die allgemeine Stimmung der Kommentare zu ermitteln."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -13,8 +23,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -26,6 +35,16 @@
     "train_df = pd.read_csv('preprocessed/train.csv')\n",
     "val_df = pd.read_csv('preprocessed/val.csv')\n",
     "test_df = pd.read_csv('preprocessed/test.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir verwenden den `TfidfVectorizer` aus `scikit-learn`, um die Textdaten in numerische Vektoren umzuwandeln. Dies geschieht durch die Berechnung der Term Frequency-Inverse Document Frequency (TF-IDF) Werte für jedes Wort im Text.\n",
+    "\n",
+    "Die Methode \"fit_transform\" wird auf die Trainingsdaten angewendet, um das Vokabular zu lernen und die Textdaten in numerische Vektoren umzuwandeln. Derselbe Vektorisierer wird dann verwendet, um die Validierungs- und Testdaten mit der Methode `transform` zu transformieren."
    ]
   },
   {
@@ -45,6 +64,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir trainieren vier verschiedene Modelle, um eine Sentiment-Analysis der vektorisierten Textdaten durchzuführen: Multinomial Naive Bayes\", \"Logistische Regression\", \"Lineare SVM\" und \"Random Forest\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -57,6 +84,14 @@
     "    'Linear SVM': LinearSVC(),\n",
     "    'Random Forest': RandomForestClassifier()\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir bewerten die Leistung jedes Modells auf dem Validierungssatz. Dies geschieht durch den Aufruf der Methode `fit` für die Trainingsdaten (`X_train` und `y_train`) und die anschließende Verwendung des trainierten Modells, um mit der Methode `predict` Vorhersagen für die Validierungsdaten (`X_val`) zu treffen."
    ]
   },
   {
@@ -124,7 +159,17 @@
     "    y_pred = model.predict(X_val)\n",
     "    acc = accuracy_score(y_val, y_pred)\n",
     "    print(f'Validation accuracy of {name}: {acc:.4f}')\n",
-    "    print(classification_report(y_val, y_pred))\n"
+    "    print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nach der Bewertung der Leistung jedes Modells in der Validierungsgruppe wählen wir das beste Modell auf der Grundlage der Validierungsergebnisse aus. In diesem Fall wird das Modell `LinearSVC` als das beste Modell ausgewählt.\n",
+    "\n",
+    "Das beste Modell wird dann mit der Methode `Fit` auf den Trainingsdaten (X_Train und y_Train) trainiert und mit der Methode `Predict` für Vorhersagen auf den Testdaten (X_test) verwendet."
    ]
   },
   {
@@ -157,6 +202,14 @@
     "acc = accuracy_score(y_test, y_pred)\n",
     "print(f'Test accuracy of {best_model}: {acc:.4f}')\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir führen eine Abstimmung der Hyperparameter durch, um die besten Hyperparameter für das Modell `LinearSVC` zu finden. Dazu wird `GridSearchCV` aus `scikit-learn` verwendet, das eine Suche über ein bestimmtes Parametergitter durchführt.\n"
    ]
   },
   {
@@ -267,16 +320,34 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stimmungsanalyse für IMDB-Kommentare (Basic NN Model)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Embedding, LSTM, SimpleRNN, Dropout, Flatten\n",
+    "from tensorflow.keras.layers import Dense, Embedding,Dropout, Flatten\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir verwenden den Tokenizer von keras, um die Textdaten zu tokenisieren. \n",
+    "\n",
+    "Die Sequenzen werden dann mit Hilfe der Funktion `pad_sequences` von keras auf eine feste Länge von 500 aufgefüllt. Dies geschieht durch Hinzufügen von Nullen am Ende der Sequenzen (oder durch Entfernen von Wörtern am Ende), bis sie die gewünschte Länge haben."
    ]
   },
   {
@@ -297,6 +368,16 @@
     "X_test = tokenizer.texts_to_sequences(test_df['review'])\n",
     "X_test = pad_sequences(X_test, maxlen=500, padding='post', truncating='post')\n",
     "y_test = test_df['sentiment']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir trainieren ein vanilla neuronales Netzwerk, um eine Stimmungsanalyse auf den mit Token versehenen und aufgefüllten Textdaten durchzuführen. Das Modell wird mit der API `Sequential` von Keras erstellt. Das Model besteht aus einem Embedding-layer, der eine 32-dimensionale Repräsentation für jedes Wort im Vokabular erlernt (max 10.000 words). Die Ausgabe der Embedding-Schicht wird dann abgeflacht und in zwei \"Dense\"-Schichten mit \"Relu\"- bzw. \"Sigmoid\"-Aktivierungsfunktionen geleitet.\n",
+    "\n",
+    "Das Model wird auf den Trainingsdaten für 10 Epochen mit einer Batchsize von 128 trainiert.\n"
    ]
   },
   {
@@ -397,6 +478,15 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overfitting ?? Ein Anzeichen für eine Overfitting ist, wenn die Trainingsgenauigkeit weiter steigt, während die Validierungsgenauigkeit abnimmt. Dies deutet darauf hin, dass sich das Modell die Trainingsdaten merkt, anstatt zu lernen, auf neue Daten zu verallgemeinern.\n",
+    "Eventuell hilft es, eine Dropout schicht hinzuzufügen und das Modell etwas komplexer zu machen:"
    ]
   },
   {
@@ -510,8 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overfitting?\n",
-    "Interpretation: When a model's training accuracy keeps increasing but its validation accuracy starts decreasing, it is a sign of overfitting. The model is fitting the training data too well and not generalizing well to new data. It could be too complex relative to the amount of available training data. "
+    "Man kann sehen, dass das Model etwas besser performt, jedoch das Problem des Overfittings immernoch besteht. Im nächsten Notebook wird deshalb eine für Sprachsequenzen optimierte Archtiektur, genannt LSTM, genutzt und evaluiert."
    ]
   }
  ],
