--- a/sentiment_analysis/sentiment_analysis_preprocessing.ipynb
+++ b/sentiment_analysis/sentiment_analysis_preprocessing.ipynb
@@ -5,12 +5,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Stimmungsanalyse für IMDB-Kommentare (Preprocessing)\n",
+    "\n",
+    "In diesem Projekt werden wir eine Stimmungsanalyse für IMDB-Kommentare durchführen.\n",
+    "\n",
+    "Zunächst importieren wir die notwendige Bibliothek \"pandas\", um unsere Daten zu lesen und zu bearbeiten."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Data Collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +42,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nachdem wir die Daten in einen DataFrame eingelesen haben, können wir uns die ersten 5 Zeilen unserer Daten mit der Methode \"head()\" ansehen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +118,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +129,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir können auch auf bestimmte Spalten und Zeilen unserer Daten zugreifen, indem wir die Indizierung verwenden. In diesem Fall greifen wir auf die erste Bewertung in der Spalte \"Bewertung\" zu."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +147,7 @@
        "\"One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked. They are right, as this is exactly what happened with me.<br /><br />The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.<br /><br />It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.<br /><br />I would say the main appeal of the show is due to the fact that it goes where other shows wouldn't dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesn't mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldn't say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards who'll be sold out for a nickel, inmates who'll kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\""
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +158,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir können eine Zusammenfassung unserer Daten mit der Methode \"info()\" erhalten. Diese Methode zeigt Informationen über den DataFrame an, einschließlich des Indexdatentyps und der Spalten, der Nicht-Null-Werte und der Speichernutzung."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +192,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir zählen die Anzahl der positiven und negativen Bewertungen in der Spalte \"sentiment\" mit der Methode `value_counts()`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +213,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,8 +224,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit der Methode value_counts() können wir dann die Anzahl der doppelten Zeilen zählen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +244,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,8 +263,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nachdem wir doppelte Zeilen in unseren Daten identifiziert haben, können wir sie mit der Methode `drop_duplicates()` löschen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +281,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checken ob das funktioniert hat:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +300,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,8 +311,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um eine Textvorverarbeitung mit unseren Daten durchzuführen, müssen wir einige zusätzliche Bibliotheken importieren. Wir importieren die \"String\"-Bibliothek zur Verarbeitung von Zeichenketten und die \"Nltk\"-Bibliothek zur Verarbeitung natürlicher Sprache."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +341,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +356,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All Texte in \"review\" zu kleinbuchstaben"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +374,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ein weiterer Schritt in unserer Textvorverarbeitung ist das Entfernen von Satzzeichen aus unserem Text. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,8 +392,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checken ob es funktioniert hat"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +410,7 @@
        "'one of the other reviewers has mentioned that after watching just 1 oz episode youll be hooked they are right as this is exactly what happened with mebr br the first thing that struck me about oz was its brutality and unflinching scenes of violence which set in right from the word go trust me this is not a show for the faint hearted or timid this show pulls no punches with regards to drugs sex or violence its is hardcore in the classic use of the wordbr br it is called oz as that is the nickname given to the oswald maximum security state penitentary it focuses mainly on emerald city an experimental section of the prison where all the cells have glass fronts and face inwards so privacy is not high on the agenda em city is home to manyaryans muslims gangstas latinos christians italians irish and moreso scuffles death stares dodgy dealings and shady agreements are never far awaybr br i would say the main appeal of the show is due to the fact that it goes where other shows wouldnt dare forget pretty pictures painted for mainstream audiences forget charm forget romanceoz doesnt mess around the first episode i ever saw struck me as so nasty it was surreal i couldnt say i was ready for it but as i watched more i developed a taste for oz and got accustomed to the high levels of graphic violence not just violence but injustice crooked guards wholl be sold out for a nickel inmates wholl kill on order and get away with it well mannered middle class inmates being turned into prison bitches due to their lack of street skills or prison experience watching oz you may become comfortable with what is uncomfortable viewingthats if you can get in touch with your darker side'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,8 +421,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir können Stoppwörter aus unserem Text entfernen. Dies ist ein häufiges Vorgehen in NLP-Anwendungen. Stoppwörter sind häufig vorkommende Wörter, die keine signifikante Bedeutung haben und oft aus Textdaten entfernt werden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,8 +440,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir ordnen unsere Sentiment nun Zahlen zu. Wir ordnen \"positive\" Werte 1 und \"negative\" Werte 0 zu, indem wir die Methode \"map()\" verwenden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,8 +458,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir können unsere Textdaten auch tokenisieren. Bei der Tokenisierung wird der Text in einzelne Token oder Wörter zerlegt."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +477,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir können für unsere Textdaten außerdem ein Stemming durchführen. Unter Stemming versteht man das Reduzieren von Wörtern auf ihre Grund- oder Stammform."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,8 +497,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nachdem wir unsere Textdaten gestemmt haben, können wir die gestemmten Wörter mit der Methode `join()` wieder zu einer einzigen Zeichenkette zusammenfügen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +612,7 @@
        "[49582 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,15 +636,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nach der Vorverarbeitung unserer Textdaten können wir sie in Trainings-, Validierungs- und Testmengen aufteilen. Wirerstellen wir eine Instanz der Klasse StratifiedShuffleSplit, um einen stratifizierten Train/Test-Split mit unseren Daten durchzuführen. Wir setzen den Parameter n_splits auf 1, um einen einzigen Split durchzuführen, den Parameter test_size auf 0,3, um 30 % unserer Daten für den Test zu verwenden, und den Parameter random_state auf 42, um die Reproduzierbarkeit zu gewährleisten."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "\n",
-    "# stratified train/test split (0.7/0.3)\n",
-    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.3, random_state=42)\n",
     "\n",
     "# stratified train/test split (0.7/0.3)\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.3, random_state=42)\n",
@@ -535,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +786,7 @@
        "[34707 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,8 +796,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nachdem wir unsere Daten in Trainings-, Validierungs- und Testdatensätze aufgeteilt und in separaten Dateien gespeichert haben, können wir sie mit der Methode \"read_csv()\" wieder in \"pandas\"-DataFrames einlesen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,8 +816,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Am Ende können wir noch die Verteilung der Sentiment-Labels in unseren Trainings-, Validierungs- und Test-Sets sowie in unserem gesamten Datensatz visualisieren."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -730,19 +891,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train input shape: torch.Size([34707, 512])\n",
-      "Train label shape: torch.Size([34707])\n",
-      "Val input shape: torch.Size([7438, 512])\n",
-      "Val label shape: torch.Size([7438])\n",
-      "Test input shape: torch.Size([7437, 512])\n",
-      "Test label shape: torch.Size([7437])\n"
+     "ename": "NameError",
+     "evalue": "name 'train_inputs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTrain input shape: \u001b[39m\u001b[39m{\u001b[39;00mtrain_inputs\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTrain label shape: \u001b[39m\u001b[39m{\u001b[39;00mtrain_labels\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mVal input shape: \u001b[39m\u001b[39m{\u001b[39;00mval_inputs\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_inputs' is not defined"
      ]
     }
    ],
