further commenting, explanation, readme

--- a/crawling_scripts/imdb_crawlings_exploration.ipynb
+++ b/crawling_scripts/imdb_crawlings_exploration.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploration der gecrawlten Daten"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,12 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In diesem Code werden mehrere CSV-Dateien aus dem Crawlings-Verzeichnis eingelesen, die dem Muster imdb_crawl*.csv entsprechen. Das sind jeweils die Crawling-Ergebnisse aus dem Skript, welches sie unter diesem Namenmuster abgespeichert hat. Die Daten werden dann zusammengefügt und in einem df gespeichert."
+    "In diesem Code werden mehrere CSV-Dateien aus dem Crawlings-Verzeichnis eingelesen, die dem Muster imdb_crawl*.csv entsprechen. Das sind jeweils die Crawling-Ergebnisse aus dem Skript imdb_library_crawl_multithread.py, welches die Dateien unter diesem Namensmuster abgespeichert hat. Die Daten werden dann zusammengefügt und in einem df gespeichert."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,183 +167,75 @@
        "      <td>short</td>\n",
        "      <td>https://m.media-amazon.com/images/M/MV5BYWZiY2...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49453</th>\n",
-       "      <td>49999</td>\n",
-       "      <td>Blondie</td>\n",
-       "      <td>Comedy,Family</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>us</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1957.0</td>\n",
-       "      <td>tv series</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BNzE0Yz...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49454</th>\n",
-       "      <td>49998</td>\n",
-       "      <td>The Big Record</td>\n",
-       "      <td>Music</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>us</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1957.0</td>\n",
-       "      <td>tv series</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BODgwOW...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49455</th>\n",
-       "      <td>49996</td>\n",
-       "      <td>Bachelor Father</td>\n",
-       "      <td>Comedy,Family</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>us</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>526.0</td>\n",
-       "      <td>Never-married attorney Bentley Gregg took on t...</td>\n",
-       "      <td>1957.0</td>\n",
-       "      <td>tv series</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BZDI5OG...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49456</th>\n",
-       "      <td>49992</td>\n",
-       "      <td>Alcoa Theatre</td>\n",
-       "      <td>Drama</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>us</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>When The Alcoa Hour dramatic anthology series ...</td>\n",
-       "      <td>1957.0</td>\n",
-       "      <td>tv series</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BZWUxMj...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49457</th>\n",
-       "      <td>49993</td>\n",
-       "      <td>Bandstand</td>\n",
-       "      <td>Music,Talk-Show</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>us</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>366.0</td>\n",
-       "      <td>On this show, Dick Clark a weekly dance that f...</td>\n",
-       "      <td>1952.0</td>\n",
-       "      <td>tv series</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BZjVjOD...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>49458 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       imdbID                               original title   \n",
-       "0           2                       Le clown et ses chiens  \\\n",
-       "1           7  Corbett and Courtney Before the Kinetograph   \n",
-       "2           1                                   Carmencita   \n",
-       "3           4                                  Un bon bock   \n",
-       "4           3                               Pauvre Pierrot   \n",
-       "...       ...                                          ...   \n",
-       "49453   49999                                      Blondie   \n",
-       "49454   49998                               The Big Record   \n",
-       "49455   49996                              Bachelor Father   \n",
-       "49456   49992                                Alcoa Theatre   \n",
-       "49457   49993                                    Bandstand   \n",
+       "   imdbID                               original title  \\\n",
+       "0       2                       Le clown et ses chiens   \n",
+       "1       7  Corbett and Courtney Before the Kinetograph   \n",
+       "2       1                                   Carmencita   \n",
+       "3       4                                  Un bon bock   \n",
+       "4       3                               Pauvre Pierrot   \n",
        "\n",
-       "                               genres      countries country codes box office   \n",
-       "0                     Animation,Short         France            fr        NaN  \\\n",
-       "1                         Short,Sport  United States            us        NaN   \n",
-       "2                   Documentary,Short  United States            us        NaN   \n",
-       "3                     Animation,Short         France            fr        NaN   \n",
-       "4      Animation,Comedy,Short,Romance         France            fr        NaN   \n",
-       "...                               ...            ...           ...        ...   \n",
-       "49453                   Comedy,Family  United States            us        NaN   \n",
-       "49454                           Music  United States            us        NaN   \n",
-       "49455                   Comedy,Family  United States            us        NaN   \n",
-       "49456                           Drama  United States            us        NaN   \n",
-       "49457                 Music,Talk-Show  United States            us        NaN   \n",
+       "                           genres      countries country codes box office  \\\n",
+       "0                 Animation,Short         France            fr        NaN   \n",
+       "1                     Short,Sport  United States            us        NaN   \n",
+       "2               Documentary,Short  United States            us        NaN   \n",
+       "3                 Animation,Short         France            fr        NaN   \n",
+       "4  Animation,Comedy,Short,Romance         France            fr        NaN   \n",
        "\n",
-       "      certificates  rating   votes   \n",
-       "0              NaN     5.8   264.0  \\\n",
-       "1              NaN     5.4   811.0   \n",
-       "2              NaN     5.7  1949.0   \n",
-       "3              NaN     5.6   179.0   \n",
-       "4       Germany:12     6.5  1781.0   \n",
-       "...            ...     ...     ...   \n",
-       "49453          NaN     7.5    95.0   \n",
-       "49454          NaN     7.0    18.0   \n",
-       "49455          NaN     7.3   526.0   \n",
-       "49456          NaN     7.4    76.0   \n",
-       "49457          NaN     7.6   366.0   \n",
+       "  certificates  rating   votes  \\\n",
+       "0          NaN     5.8   264.0   \n",
+       "1          NaN     5.4   811.0   \n",
+       "2          NaN     5.7  1949.0   \n",
+       "3          NaN     5.6   179.0   \n",
+       "4   Germany:12     6.5  1781.0   \n",
        "\n",
-       "                                            plot outline    year       kind   \n",
-       "0                                                    NaN  1892.0      movie  \\\n",
-       "1      James J. Corbett and Peter Courtney meet in a ...  1894.0      short   \n",
-       "2      Presumably, the first woman ever to appear in ...  1894.0      short   \n",
-       "3      A wanderer comes into a cabaret in the country...  1892.0      movie   \n",
-       "4                                                    NaN  1892.0      short   \n",
-       "...                                                  ...     ...        ...   \n",
-       "49453                                                NaN  1957.0  tv series   \n",
-       "49454                                                NaN  1957.0  tv series   \n",
-       "49455  Never-married attorney Bentley Gregg took on t...  1957.0  tv series   \n",
-       "49456  When The Alcoa Hour dramatic anthology series ...  1957.0  tv series   \n",
-       "49457  On this show, Dick Clark a weekly dance that f...  1952.0  tv series   \n",
+       "                                        plot outline    year   kind  \\\n",
+       "0                                                NaN  1892.0  movie   \n",
+       "1  James J. Corbett and Peter Courtney meet in a ...  1894.0  short   \n",
+       "2  Presumably, the first woman ever to appear in ...  1894.0  short   \n",
+       "3  A wanderer comes into a cabaret in the country...  1892.0  movie   \n",
+       "4                                                NaN  1892.0  short   \n",
        "\n",
-       "                                     full-size cover url  \n",
-       "0      https://m.media-amazon.com/images/M/MV5BZDI4ZD...  \n",
-       "1      https://m.media-amazon.com/images/M/MV5BODA4ZT...  \n",
-       "2      https://m.media-amazon.com/images/M/MV5BZmUzOW...  \n",
-       "3      https://m.media-amazon.com/images/M/MV5BOGI5Nj...  \n",
-       "4      https://m.media-amazon.com/images/M/MV5BYWZiY2...  \n",
-       "...                                                  ...  \n",
-       "49453  https://m.media-amazon.com/images/M/MV5BNzE0Yz...  \n",
-       "49454  https://m.media-amazon.com/images/M/MV5BODgwOW...  \n",
-       "49455  https://m.media-amazon.com/images/M/MV5BZDI5OG...  \n",
-       "49456  https://m.media-amazon.com/images/M/MV5BZWUxMj...  \n",
-       "49457  https://m.media-amazon.com/images/M/MV5BZjVjOD...  \n",
-       "\n",
-       "[49458 rows x 13 columns]"
+       "                                 full-size cover url  \n",
+       "0  https://m.media-amazon.com/images/M/MV5BZDI4ZD...  \n",
+       "1  https://m.media-amazon.com/images/M/MV5BODA4ZT...  \n",
+       "2  https://m.media-amazon.com/images/M/MV5BZmUzOW...  \n",
+       "3  https://m.media-amazon.com/images/M/MV5BOGI5Nj...  \n",
+       "4  https://m.media-amazon.com/images/M/MV5BYWZiY2...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49458"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Anzahl der Reihen des Dataframes\n",
+    "df.shape[0]"
    ]
   },
   {
@@ -361,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna(subset=['imdbID', 'original title', 'year', 'rating']) #Delete empyt columns"
+    "df = df.dropna(subset=['imdbID', 'original title', 'year', 'rating']) #Delete empty columns"
    ]
   },
   {
@@ -635,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dieser Code erzeugt eine Regressionsgrafik der durchschnittlichen IMDb-Bewertungen nach Jahr bis 1945. Das Diagramm untersucht, ob der Trend zu höheren Bewertungen für früher veröffentlichte Filme über den im Datensatz vorhandenen Zeitraum hinausgeht. Tatsächlich ist ein gegenteiliger Trend zu erkennen: Filme, die vor 1945 produziert wurden, verlieren an Popularität, wie ihre durchschnittlichen IMDb-Bewertungen zeigen."
+    "Dieser Code erzeugt eine Regressionsgrafik der durchschnittlichen IMDb-Bewertungen nach 1892 bis 1945. Das Diagramm untersucht, ob der Trend zu höheren Bewertungen für früher veröffentlichte Filme über den im Datensatz vorhandenen Zeitraum hinausgeht. Tatsächlich ist ein gegenteiliger Trend, wie in data_exploration.ipynb zu erkennen: Filme, die vor 1945 produziert wurden, verlieren an Popularität, wie ihre durchschnittlichen IMDb-Bewertungen zeigen."
    ]
   }
  ],
@@ -655,9 +555,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f5665510ca189cb7ac4e3c864232ded5619aba5408faa44ba3e72f4f05a1b94d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
