--- a/sentiment_analysis/sentiment_analysis_preprocessing.ipynb
+++ b/sentiment_analysis/sentiment_analysis_preprocessing.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data viewing"
+    "Data Viewing"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All Texte in \"review\" zu kleinbuchstaben"
+    "Alle Texte in \"review\" zu Kleinbuchstaben wandeln"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir ordnen unsere Sentiment nun Zahlen zu. Wir ordnen \"positive\" Werte 1 und \"negative\" Werte 0 zu, indem wir die Methode \"map()\" verwenden."
+    "Wir ordnen unserem Sentiment nun Zahlen zu. Wir ordnen \"positive\" Werte 1 und \"negative\" Werte 0 zu, indem wir die Methode \"map()\" verwenden."
    ]
   },
   {
@@ -640,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nach der Vorverarbeitung unserer Textdaten können wir sie in Trainings-, Validierungs- und Testmengen aufteilen. Wirerstellen wir eine Instanz der Klasse StratifiedShuffleSplit, um einen stratifizierten Train/Test-Split mit unseren Daten durchzuführen. Wir setzen den Parameter n_splits auf 1, um einen einzigen Split durchzuführen, den Parameter test_size auf 0,3, um 30 % unserer Daten für den Test zu verwenden, und den Parameter random_state auf 42, um die Reproduzierbarkeit zu gewährleisten."
+    "Nach der Vorverarbeitung unserer Textdaten können wir sie in Trainings-, Validierungs- und Testmengen aufteilen. Wir erstellen eine Instanz der Klasse StratifiedShuffleSplit, um einen stratifizierten Train/Test-Split mit unseren Daten durchzuführen. Wir setzen den Parameter n_splits auf 1, um einen einzigen Split durchzuführen, den Parameter test_size auf 0,3, um 30 % unserer Daten für den Test zu verwenden, und den Parameter random_state auf 42, um die Reproduzierbarkeit zu gewährleisten."
    ]
   },
   {
