--- a/crawling_scripts/imdb_library_exploration.ipynb
+++ b/crawling_scripts/imdb_library_exploration.ipynb
@@ -1428,12 +1428,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "290f75e68ed0da714247ccd610ce4a15a5bfa48e2a04a943182beeac16de2706"
+    "hash": "f5665510ca189cb7ac4e3c864232ded5619aba5408faa44ba3e72f4f05a1b94d"
    }
   }
  },
