--- a/sentiment_analysis/sentiment_analysis_using_LSTM.ipynb
+++ b/sentiment_analysis/sentiment_analysis_using_LSTM.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dasa LSTM-Model hat immernoch mit Overfitting zu kämpfen, hat aber mit einer Test Accuracy von 89,49 % den besten Wert. Deshalb wird im folgendem das Model zur klassifizierung eigener Bewertungen in String format verwendet"
+    "Das LSTM-Model hat immernoch mit Overfitting zu kämpfen, hat aber mit einer Test Accuracy von 89,49 % den besten Wert. Deshalb wird im folgendem das Model zur Klassifizierung eigener Bewertungen im String Format verwendet"
    ]
   },
   {
@@ -317,9 +317,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f5665510ca189cb7ac4e3c864232ded5619aba5408faa44ba3e72f4f05a1b94d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
