--- a/sentiment_analysis/sentiment_analysis_using_bert.ipynb
+++ b/sentiment_analysis/sentiment_analysis_using_bert.ipynb
@@ -152,11 +152,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the `DistilBERT` model from the `transformers` library for our sentiment analysis task. We also use the `DistilBERT` tokenizer to tokenize our text data.\n",
+    "Wir benutzen das Model `DistilBERT` von der `transformers` Bibliothek für unsere Sentiment-Analyse. Wir benutzen außerdem den `DistilBERT` tokenizer um unsere Text Daten zu tokenisieren.\n",
     "\n",
     "Im Code importieren wir zunächst die notwendigen Bibliotheken für die Arbeit mit PyTorch und die Bibliothek \"Transformers\". Dann laden wir den Tokenizer \"DistilBERT\", den wir zur Tokenisierung unserer Textdaten verwenden werden.\n",
     "\n",
-    "Als nächstes definieren wir eine benutzerdefinierte \"SentimentDataset\"-Klasse. Diese Klasse nimmt eine Liste von reviews und eine Liste von labels als Eingabe auf. Die Methode `__len__` gibt die Länge des Datensatzes zurück, während die Methode `__getitem__` ein Wörterbuch zurückgibt, das die tokenisierte reviews, die attention-mask und das Label für einen bestimmten Index enthält."
+    "Als nächstes definieren wir eine benutzerdefinierte \"SentimentDataset\"-Klasse. Diese Klasse nimmt eine Liste von reviews und eine Liste von labels als Eingabe auf. Die Methode `__len__` gibt die Länge des Datensatzes zurück, während die Methode `__getitem__` ein Wörterbuch zurückgibt, das die tokenisierten Reviews, die Attention-Mask und das Label für einen bestimmten Index enthält."
    ]
   },
   {
@@ -229,7 +229,7 @@
     "\n",
     "Wir setzen die Anzahl der Trainingsepochen auf 2 und laden das vortrainierte DistilBERT-Modell für die Sequenzklassifikation.\n",
     "\n",
-    "Als nächstes definieren wir die Loss-function, den Optimizer und den lr_scheduler, die wir während des Trainings verwenden werden. Wir verwenden binary cross-entropy loss als Verlustfunktion, da wir ein binäres Klassifikationsproblem lösen. Wir verwenden den Adam-Optimizer mit einer Lr von 2e-5, um die Lernrate im Laufe des Trainings schrittweise zu erhöhen und dann zu verringern."
+    "Als nächstes definieren wir die Loss-FunKtion, den Optimizer und den lr_scheduler, die wir während des Trainings verwenden werden. Wir verwenden binary cross-entropy loss als Verlustfunktion, da wir ein binäres Klassifikationsproblem lösen. Wir verwenden den Adam-Optimizer mit einer Lr von 2e-5, um die Lernrate im Laufe des Trainings schrittweise zu erhöhen und dann zu verringern."
    ]
   },
   {
@@ -346,7 +346,7 @@
    "source": [
     "Jetzt können wir unser Model trainieren\n",
     "\n",
-    "ImCode durchlaufen wir jede Epoche in einer Schleife und trainieren unser Modell anhand der Trainingsdaten. Bei jeder Iteration der inneren Schleife holen wir einen Datenstapel aus dem train_loader, konvertieren die Daten in das richtie Format und konvertieren die Beschriftungen in eine One-Hot-Codierung. \n",
+    "ImCode durchlaufen wir jede Epoche in einer Schleife und trainieren unser Modell anhand der Trainingsdaten. Bei jeder Iteration der inneren Schleife holen wir einen Datenstapel aus dem train_loader, konvertieren die Daten in das richtige Format und konvertieren die Beschriftungen in eine One-Hot-Codierung. \n",
     "\n",
     "Nach  einer Epoche bewerten wir unser Modell anhand der Validierungsdaten."
    ]
@@ -1103,12 +1103,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "290f75e68ed0da714247ccd610ce4a15a5bfa48e2a04a943182beeac16de2706"
+    "hash": "f5665510ca189cb7ac4e3c864232ded5619aba5408faa44ba3e72f4f05a1b94d"
    }
   }
  },
