--- a/sentiment_analysis/sentiment_analysis_using_different_techniques.ipynb
+++ b/sentiment_analysis/sentiment_analysis_using_different_techniques.ipynb
@@ -485,8 +485,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overfitting ?? Ein Anzeichen für eine Overfitting ist, wenn die Trainingsgenauigkeit weiter steigt, während die Validierungsgenauigkeit abnimmt. Dies deutet darauf hin, dass sich das Modell die Trainingsdaten merkt, anstatt zu lernen, auf neue Daten zu verallgemeinern.\n",
-    "Eventuell hilft es, eine Dropout schicht hinzuzufügen und das Modell etwas komplexer zu machen:"
+    "Overfitting? Ein Anzeichen für Overfitting ist, wenn die Trainingsgenauigkeit weiter steigt, während die Validierungsgenauigkeit abnimmt. Dies deutet darauf hin, dass sich das Modell die Trainingsdaten merkt, anstatt zu lernen und auf neue Daten zu verallgemeinern.\n",
+    "Eventuell hilft es, eine Dropoutschicht hinzuzufügen und das Modell etwas komplexer zu machen:"
    ]
   },
   {
@@ -620,9 +620,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f5665510ca189cb7ac4e3c864232ded5619aba5408faa44ba3e72f4f05a1b94d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
