--- a/data_exploration/fullplot_to_genre.ipynb
+++ b/data_exploration/fullplot_to_genre.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fullplot zur Genrevorhersage mit einfachen Techniken des maschinellen Lernens\n",
+    "\n",
+    "(Dies ist nur ein einfacher Versuch, für eine ausführlichere machine learning Anwendung siehe `sentiment_analysis`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
