add more html sites

--- a/data_exploration/fullplot_to_genre.ipynb
+++ b/data_exploration/fullplot_to_genre.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,11 +19,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In diesem Codeschnipsel lesen wir zunächst die Filmdaten aus einer CSV-Datei in einen Pandas-Datenframe. Dann filtern wir Filme mit weniger als 1000 Stimmen auf IMDB heraus. Schließlich zeigen wir den Kopf des gefilterten Datenrahmens an, um die obersten 5 Zeilen des resultierenden Datensatzes zu sehen."
+    "In diesem Code lesen wir zunächst die Filmdaten aus einer CSV-Datei in einen Pandas-Datenframe. Dann filtern wir Filme mit weniger als 1000 Stimmen auf IMDB heraus. Schließlich zeigen wir den Kopf des gefilterten Datenrahmens an, um die obersten 5 Zeilen des resultierenden Datensatzes zu sehen."
    ]
   },
   {
@@ -272,7 +270,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -411,7 +408,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -460,7 +456,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,7 +599,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -643,7 +637,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -663,11 +656,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wir verwenden de TfidfVectorizer aus sklearn, um Textdaten in numerische Merkmale umzuwandeln"
+    "wir verwenden den TfidfVectorizer aus sklearn, um Textdaten in numerische Merkmale umzuwandeln"
    ]
   },
   {
@@ -688,7 +680,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -744,7 +735,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -799,7 +789,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -842,7 +831,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -858,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -873,8 +861,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.2"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
