updated picture for data_expl

--- a/data_exploration/fullplot_to_genre.ipynb
+++ b/data_exploration/fullplot_to_genre.ipynb
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wir verwenden de TfidfVectorizer aus sklearn, um Textdaten in numerische Merkmale umzuwandeln"
+    "Wir verwenden de TfidfVectorizer aus sklearn, um Textdaten in numerische Merkmale umzuwandeln"
    ]
   },
   {
@@ -738,8 +738,7 @@
     "\n",
     "    # Compute the accuracy of the classifier\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "\n",
-    "    # Print the results\n",
+    "    \n",
     "    print(f'{name}: {accuracy:.3f}')"
    ]
   },
@@ -821,12 +820,12 @@
     }
    ],
    "source": [
-    "# Define a list of classifiers to try\n",
     "classifiers = [\n",
     "    ('Linear SVM', LinearSVC(C=0.7)),\n",
     "    ('Random Forest', RandomForestClassifier(n_estimators= 100, max_depth= None))\n",
     "]\n",
-    "# Train and evaluate each classifier\n",
+    "\n",
+    "# Train and evaluate each classifier with better hypepparameters\n",
     "for name, clf in classifiers:\n",
     "    # Fit the classifier on the training data\n",
     "    clf.fit(X_train, y_train)\n",
